src/objects/SBQQ__ImportFormat__c.object
<CustomObject>
    <customHelpPage>SBQQ__ImportFormatHelp</customHelpPage>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When activated, the input format becomes available for use.</description>
        <inlineHelpText>Select the checkbox to make the input format available for use.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ImportFormatName__c</fullName>
        <description>A meaningful name that describes the input format.</description>
        <inlineHelpText>Enter a meaningful name that describes the input format.</inlineHelpText>
        <label>Import Format Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__TargetObject__c</fullName>
        <description>Target Object to be imported.</description>
        <inlineHelpText>Target Object to be imported.</inlineHelpText>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote Line</fullName>
                    <default>true</default>
                    <label>Quote Line</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UniqueKeyCount__c</fullName>
        <description>A count of the unique Keys within the Import Format.</description>
        <inlineHelpText>A count of the unique Keys within the Import Format.</inlineHelpText>
        <label># Unique Key</label>
        <summaryFilterItems>
            <field>SBQQ__ImportColumn__c.SBQQ__Key__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__ImportColumn__c.SBQQ__ImportFormat__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Import Format</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ImportFormatName__c</columns>
        <columns>SBQQ__TargetObject__c</columns>
        <columns>SBQQ__UniqueKeyCount__c</columns>
        <columns>SBQQ__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IF-{000}</displayFormat>
        <label>Import Format #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Import Formats</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SBQQ__Num_Unique_Key_is_not_one</fullName>
        <active>true</active>
        <description>More than 1 unique key defined in Import Column.</description>
        <errorConditionFormula>If(SBQQ__UniqueKeyCount__c &gt; 1, true, false)</errorConditionFormula>
        <errorMessage>More than 1 unique key defined in Import Column.</errorMessage>
    </validationRules>
</CustomObject>